icons potion alignment fix

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -1528,7 +1528,7 @@ body.platformDocs{
 .platformDocs .container .contentbody tip{
     background-color:#D4EDDA;
     border-radius: 4px;
-    padding: 15px 15px 15px 30px;
+    padding: 15px 15px 15px 40px;
     color: #155724;
     display: block;
     position: relative;
@@ -1539,7 +1539,7 @@ body.platformDocs{
 .platformDocs .container .contentbody note{
     background-color:#FFFBEA;
     border-radius: 4px;
-    padding: 15px 15px 15px 30px;
+    padding: 15px 15px 15px 40px;
     color: #806D16;
     display: block;
     position: relative;
@@ -1554,7 +1554,7 @@ body.platformDocs{
     background-repeat: no-repeat;
     position: absolute;
     left: 15px;
-    top: 20px;
+    top: 18px;
     color: #155724;
     width: 16px;
     height: 16px;
@@ -1566,7 +1566,7 @@ body.platformDocs{
     background-repeat: no-repeat;
     position: absolute;
     left: 15px;
-    top: 20px;
+    top: 17px;
     color: #806D16;
     width: 16px;
     height: 16px;
@@ -1579,7 +1579,7 @@ body.platformDocs{
     /* background-position: right center; */
     position: absolute;
     left: 15px;
-    top: 20px;
+    top: 16px;
     color: #FBC4C4;
     width: 16px;
     height: 16px;
@@ -1587,7 +1587,7 @@ body.platformDocs{
 .platformDocs .container .contentbody warning{
     background-color:#FBC4C4;
     border-radius: 4px;
-    padding: 15px 15px 15px 30px;
+    padding: 15px 15px 15px 40px;
     color: #202427;
     display: block;
     position: relative;
@@ -1972,7 +1972,7 @@ body.itAssistDocs{
 .itAssistDocs .container .contentbody tip{
     background-color:#D4EDDA;
     border-radius: 4px;
-    padding: 15px 15px 15px 30px;
+    padding: 15px 15px 15px 40px;
     color: #155724;
     display: block;
     position: relative;
@@ -1983,7 +1983,7 @@ body.itAssistDocs{
 .itAssistDocs .container .contentbody note{
     background-color:#FFFBEA;
     border-radius: 4px;
-    padding: 15px 15px 15px 30px;
+    padding: 15px 15px 15px 40px;
     color: #806D16;
     display: block;
     position: relative;
@@ -1995,7 +1995,7 @@ body.itAssistDocs{
     background-repeat: no-repeat;
     position: absolute;
     left: 15px;
-    top: 20px;
+    top: 18px;
     color: #155724;
     width: 16px;
     height: 16px;
@@ -2007,7 +2007,7 @@ body.itAssistDocs{
     background-repeat: no-repeat;
     position: absolute;
     left: 15px;
-    top: 20px;
+    top: 17px;
     color: #806D16;
     width: 16px;
     height: 16px;
@@ -2020,7 +2020,7 @@ body.itAssistDocs{
     /* background-position: right center; */
     position: absolute;
     left: 15px;
-    top: 20px;
+    top: 16px;
     color: #FBC4C4;
     width: 16px;
     height: 16px;
@@ -2032,7 +2032,7 @@ body.itAssistDocs{
 .itAssistDocs .container .contentbody warning{
     background-color:#FBC4C4;
     border-radius: 4px;
-    padding: 15px 15px 15px 30px;
+    padding: 15px 15px 15px 40px;
     color: #202427;
     display: block;
     position: relative;
@@ -2416,7 +2416,7 @@ body.smartassistDocs{
 .smartassistDocs .container .contentbody tip{
     background-color:#D4EDDA;
     border-radius: 4px;
-    padding: 15px 15px 15px 30px;
+    padding: 15px 15px 15px 40px;
     color: #155724;
     display: block;position: relative;
 }
@@ -2430,7 +2430,7 @@ body.smartassistDocs{
     background-repeat: no-repeat;
     position: absolute;
     left: 15px;
-    top: 20px;
+    top: 18px;
     color: #155724;
 }
 .smartassistDocs .container .contentbody note::before{
@@ -2440,7 +2440,7 @@ body.smartassistDocs{
     background-repeat: no-repeat;
     position: absolute;
     left: 15px;
-    top: 20px;
+    top: 17px;
     color: #806D16;
     width: 16px;
     height: 16px;
@@ -2453,7 +2453,7 @@ body.smartassistDocs{
     /* background-position: right center; */
     position: absolute;
     left: 15px;
-    top: 20px;
+    top: 16px;
     color: #FBC4C4;
     width: 16px;
     height: 16px;
@@ -2461,7 +2461,7 @@ body.smartassistDocs{
 .smartassistDocs .container .contentbody note{
     background-color:#FFFBEA;
     border-radius: 4px;
-    padding: 15px 15px 15px 30px;
+    padding: 15px 15px 15px 40px;
     color: #806D16;
     display: block;
     position: relative;
@@ -2475,7 +2475,7 @@ body.smartassistDocs{
 .smartassistDocs .container .contentbody warning{
     background-color:#FBC4C4;
     border-radius: 4px;
-    padding: 15px 15px 15px 30px;
+    padding: 15px 15px 15px 40px;
     color: #202427;
     display: block;
     position: relative;
@@ -2860,7 +2860,7 @@ body.searchassistDocs{
 .searchassistDocs .container .contentbody tip{
     background-color:#D4EDDA;
     border-radius: 4px;
-    padding: 15px 15px 15px 30px;
+    padding: 15px 15px 15px 40px;
     color: #155724;
     display: block;
     position: relative;
@@ -2871,7 +2871,7 @@ body.searchassistDocs{
 .searchassistDocs .container .contentbody note{
     background-color:#FFFBEA;
     border-radius: 4px;
-    padding: 15px 15px 15px 30px;
+    padding: 15px 15px 15px 40px;
     color: #806D16;
     display: block;
     position: relative;
@@ -2886,7 +2886,7 @@ body.searchassistDocs{
     background-repeat: no-repeat;
     position: absolute;
     left: 15px;
-    top: 20px;
+    top: 18px;
     color: #155724;
     width: 16px;
     height: 16px;
@@ -2898,7 +2898,7 @@ body.searchassistDocs{
     background-repeat: no-repeat;
     position: absolute;
     left: 15px;
-    top: 20px;
+    top: 17px;
     color: #806D16;
     width: 16px;
     height: 16px;
@@ -2911,7 +2911,7 @@ body.searchassistDocs{
     /* background-position: right center; */
     position: absolute;
     left: 15px;
-    top: 20px;
+    top: 16px;
     color: #FBC4C4;
     width: 16px;
     height: 16px;
@@ -2919,7 +2919,7 @@ body.searchassistDocs{
 .searchassistDocs .container .contentbody warning{
     background-color:#FBC4C4;
     border-radius: 4px;
-    padding: 15px 15px 15px 30px;
+    padding: 15px 15px 15px 40px;
     color: #202427;
     display: block;
     position: relative;
